--- a/alembic.ini
+++ b/alembic.ini
@@ -62,7 +62,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 ; sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = sqlite:///./shopping.db
+sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5433/shopping_db
 
 
 [post_write_hooks]
