--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,12 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - redis
     environment:
       - DATABASE_URL=postgresql+asyncpg://user:password@db/shopping_db
+      - REDIS_URL=redis://redis:6379
+    env_file:
+      - .env  # Include the .env file to inject environment variables
 
   db:
     image: postgres:13
@@ -21,6 +25,11 @@ services:
       - POSTGRES_DB=shopping_db
     ports:
       - "5433:5432"
+
+  redis:
+    image: redis:6
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
